Fixed wrong color

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -850,7 +850,7 @@ body {
     ul {
       margin: 0;
       box-shadow: 0 3px 6px -2px var(--shadow-dark);
-      background-color: var(--primary-color);
+      background-color: var(--body-background);
       display: block;
       left: 0;
       width: 100%;
